--- a/acquia-pipelines.yaml
+++ b/acquia-pipelines.yaml
@@ -1,9 +1,15 @@
 version: 1.0.0
+variables:
+  global:
+    HOSTING_API_STAGE: canary
 events:
   build:
     steps:
       - build:
           script:
+            - nvm install v6.11.1
+            - nvm use 6.11.1
+            - npm install
             - npm run build
       - upload-artifact:
           script:
