--- a/3p/package.json
+++ b/3p/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "3bl",
+  "name": "3p",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/3p",
   "dependencies": {
-    "3p": "file:3p",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.3"
