fix to remove subfolder and rename

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "3bl",
+  "name": "3p",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "3p": "file:3p",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.3"
