--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "apollo-boost": "^0.1.20",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.4.2",
+    "react-moment": "^0.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3"
   },
