--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "apollo-boost": "^0.1.20",
+    "apollo-link": "^1.2.3",
+    "apollo-link-rest": "^0.6.0",
     "graphql": "^14.0.2",
+    "graphql-anywhere": "^4.1.22",
     "graphql-tag": "^2.10.0",
     "moment": "^2.22.2",
     "react": "^16.4.2",
