--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.4.2",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.4.2",
+    "react-html-parser": "^2.0.2",
     "react-moment": "^0.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3"
