--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql-anywhere": "^4.1.22",
     "graphql-tag": "^2.10.0",
     "moment": "^2.22.2",
+    "node-sass": "^4.10.0",
     "react": "^16.4.2",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.4.2",
