--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-apollo": "^2.2.4",
     "react-dom": "^16.4.2",
     "react-html-parser": "^2.0.2",
+    "react-lazyload": "^2.3.0",
     "react-moment": "^0.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3"
