--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.1.20",
     "apollo-link": "^1.2.3",
     "apollo-link-rest": "^0.6.0",
+    "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-anywhere": "^4.1.22",
     "graphql-tag": "^2.10.0",
@@ -22,7 +23,7 @@
     "react-lazyload": "^2.3.0",
     "react-moment": "^0.8.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.3"
+    "react-scripts": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +31,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000/",
   "eslintConfig": {
     "extends": "react-app"
   },
