--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-lazyload": "^2.3.0",
     "react-moment": "^0.8.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.3"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
