--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-lazyload": "^2.3.0",
     "react-moment": "^0.8.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.2"
+    "react-scripts": "^2.1.3",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
