--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.1.20",
     "apollo-link": "^1.2.3",
     "apollo-link-rest": "^0.6.0",
+    "babel-polyfill": "^6.26.0",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-anywhere": "^4.1.22",
