--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-apollo": "^2.2.4",
     "react-dfp": "^0.7.6",
     "react-dom": "^16.4.2",
+    "react-gtm-module": "^2.0.2",
     "react-html-parser": "^2.0.2",
     "react-lazyload": "^2.3.0",
     "react-moment": "^0.8.3",
