Update title and favicon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Triple Pundit",
+  "name": "TriplePundit: Reporting on the Triple Bottom Line & Sustainable Business News",
   "icons": [
     {
       "src": "favicon.ico",
