--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-html-parser": "^2.0.2",
     "react-lazyload": "^2.3.0",
     "react-moment": "^0.8.3",
+    "react-player": "^1.8.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "socket.io": "^2.2.0"
