--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-gtm-module": "^2.0.2",
     "react-html-parser": "^2.0.2",
     "react-lazyload": "^2.3.0",
+    "react-meta-tags": "^0.7.3",
     "react-moment": "^0.8.3",
     "react-player": "^1.8.0",
     "react-router-dom": "^4.3.1",
