--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/register": "^7.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
@@ -10,11 +11,14 @@
     "apollo-boost": "^0.1.20",
     "apollo-link": "^1.2.3",
     "apollo-link-rest": "^0.6.0",
+    "babel-plugin-graphql-tag": "^1.6.0",
+    "babel-plugin-transform-assets": "^1.0.2",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-anywhere": "^4.1.22",
-    "graphql-tag": "^2.10.0",
+    "graphql-tag": "^2.10.1",
+    "ignore-styles": "^5.0.1",
     "moment": "^2.22.2",
     "node-sass": "^4.10.0",
     "react": "^16.4.2",
