--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "socket.io": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/index.js",
     "serve": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
