--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "start": "node server/index.js",
     "serve": "node server.js",
     "build": "react-scripts build",
+    "devclient": "react-scripts start",
+    "devserver": "npm run build && node server/index.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
