--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "serve": "node server.js",
     "build": "react-scripts build",
     "devclient": "react-scripts start",
-    "devserver": "npm run build && node server/index.js",
+    "devserver": "react-scripts build && node server/index.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
