--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-assets": "^1.0.2",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.4",
+    "express-sitemap-xml": "^1.0.2",
     "graphql": "^14.0.2",
     "graphql-anywhere": "^4.1.22",
     "graphql-tag": "^2.10.1",
