--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-boost": "^0.1.20",
     "apollo-link": "^1.2.3",
     "apollo-link-rest": "^0.6.0",
+    "asyncawait": "^1.0.7",
     "babel-plugin-graphql-tag": "^1.6.0",
     "babel-plugin-transform-assets": "^1.0.2",
     "babel-polyfill": "^6.26.0",
