--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/react": "^16.9.17",
     "apollo-boost": "^0.1.28",
     "apollo-link": "^1.2.11",
     "apollo-link-rest": "^0.6.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-graphql-tag": "^1.6.0",
     "babel-plugin-transform-assets": "^1.0.2",
     "babel-polyfill": "^6.26.0",
@@ -24,14 +26,14 @@
     "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.0",
-    "react-apollo": "^2.5.6",
+    "react-apollo": "^3.1.3",
     "react-dfp": "^0.7.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-html-parser": "^2.0.2",
     "react-lazyload": "^2.6.1",
     "react-meta-tags": "^0.7.4",
-    "react-moment": "^0.8.3",
+    "react-moment": "^0.8.4",
     "react-player": "^1.11.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
