--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql-tag": "^2.10.1",
     "ignore-styles": "^5.0.1",
     "moment": "^2.24.0",
+    "newrelic": "^6.2.0",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.0",
