--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@graphql-codegen/cli": "^1.11.2",
     "@types/react": "^16.9.17",
     "apollo-boost": "^0.1.28",
     "apollo-link": "^1.2.11",
@@ -18,8 +19,9 @@
     "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
     "express-sitemap-xml": "^1.0.2",
-    "graphql": "^14.3.1",
+    "graphql": "^14.5.8",
     "graphql-anywhere": "^4.2.4",
+    "graphql-codegen-fragment-matcher": "^0.18.2",
     "graphql-tag": "^2.10.1",
     "ignore-styles": "^5.0.1",
     "moment": "^2.24.0",
